# VASCO-Verify

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  package.json
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 2025_10_28_0321-4f87b52b1041_initial_schema.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: analysis.py  detections.py  plates.py  verifications.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  detection.py  external_event.py  plate.py  verification.py
context/: 00-Quick-Start.md  01-Architecture.md  02-Project-Structure.md  03-Development-Phases.md  04-Backend-API.md  13-Commands-Reference.md
frontend/: Dockerfile  index.html  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/pages/: AnalysisPage.tsx  DetectionPage.tsx  HomePage.tsx  HomePageSimple.tsx  PlatesPage.tsx  TestPage.tsx  VerificationPage.tsx
frontend/src/services/: api.ts
frontend/src/styles/: globals.css
scripts/: init_db.py
